// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on Android the button with type cancel 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#535A61",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type confirm 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#037DD6",
          "minHeight": 50,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type normal 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#037DD6",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type orange 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "borderColor": "#F66A0A",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on iOS the button with type cancel 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#535A61",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#535A61",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type confirm 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#037DD6",
        "minHeight": 50,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#FCFCFC",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type normal 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#037DD6",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#037DD6",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type orange 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "borderColor": "#F66A0A",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#F66A0A",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;
